--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 termion = "2.0.1"
 crossterm = "0.26.1"
-tui = {version = "0.19.0", git = "https://github.com/V8gaming/tui-rs.git"}
+ratatui = {version = "0.20.1", git = "https://github.com/V8gaming/ratatui.git"}
 regex = {version = "1.7.1", features = ["pattern"]}
 lazy_static = "1.4.0"
 xml-rs = "0.8.4"
