--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ ratatui = {version = "0.20.1", git = "https://github.com/V8gaming/ratatui.git"}
 regex = {version = "1.7.1", features = ["pattern"]}
 lazy_static = "1.4.0"
 xml-rs = "0.8.4"
+base64 = "0.21.0"
+itertools = "0.10.5"
